Fix list container layout issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -233,7 +233,7 @@ body {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       grid-auto-flow: column;
-      grid-auto-columns: 300px;
+      grid-auto-columns: 320px;
       width: 100%;
 
       &:has(.list-container:only-child) {
@@ -282,7 +282,7 @@ body {
             display: flex;
             justify-content: space-between;
             place-items: center;
-            padding: 10px 20px 0px 20px;
+            padding: 10px 15px 0px 15px;
             font-weight: 600;
 
             #listOptions {
